tests/accept/fourteen.ul
void main()
{
	string s;

	s = "I am the main method bow before my might";

	println s;

}
