tests/reject/notfourteen.ul

foo(){
	string s;

	s = "this should not work";

	print s;
}
